# cm_heat_equation_cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  main.cpp
heateq/: CMakeLists.txt
heateq/benchmark/: benchmark.cpp
heateq/include/: HeatEquation.hpp
heateq/serialization/: heq.pb.cc  heq.pb.h  heq.proto
heateq/src/: HeatEquation.cpp
heateq/tests/: CMakeLists.txt  accuracy.cpp
include/: heat_equation.h  tridiagonal_matrix.h
libheateq/: CMakeLists.txt
libheateq/benchmark/: CMakeLists.txt  benchmark.cpp
libheateq/include/: HeatEquation.hpp  heat_equation.h  heat_equation.hpp
libheateq/src/: heat_equation.cpp
libheateq/tests/: CMakeLists.txt  accuracy.cpp
libheateq/visualization/: err.py  visualization.py
result/: check.py  vizualization.py
src/: heat_equation.cpp  main.cpp  tridiagonal_matrix.cpp
